--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 dio-tipo-variaveis-java/.vscode/settings.json
+Metodos Smart TV/.vscode/settings.json
